--- a/DominionTDD.Tests/DominionTDD.Tests.csproj
+++ b/DominionTDD.Tests/DominionTDD.Tests.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="CardTests.cs" />
     <Compile Include="CopperTests.cs" />
+    <Compile Include="DiscardsTests.cs" />
     <Compile Include="DuchyTests.cs" />
     <Compile Include="EstateTests.cs" />
     <Compile Include="GoldTests.cs" />
