--- a/DominionTDD.Tests/DominionTDD.Tests.csproj
+++ b/DominionTDD.Tests/DominionTDD.Tests.csproj
@@ -42,15 +42,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CardTests.cs" />
-    <Compile Include="CopperTests.cs" />
+    <Compile Include="Cards\CardTests.cs" />
+    <Compile Include="Cards\CopperTests.cs" />
+    <Compile Include="Cards\DuchyTests.cs" />
+    <Compile Include="Cards\EstateTests.cs" />
+    <Compile Include="Cards\GoldTests.cs" />
+    <Compile Include="Cards\ProvinceTests.cs" />
+    <Compile Include="Cards\SilverTests.cs" />
     <Compile Include="DiscardsTests.cs" />
-    <Compile Include="DuchyTests.cs" />
-    <Compile Include="EstateTests.cs" />
-    <Compile Include="GoldTests.cs" />
+    <Compile Include="HandTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ProvinceTests.cs" />
-    <Compile Include="SilverTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
