--- a/DominionTDD.Tests/DominionTDD.Tests.csproj
+++ b/DominionTDD.Tests/DominionTDD.Tests.csproj
@@ -52,6 +52,7 @@
     <Compile Include="DeckTests.cs" />
     <Compile Include="DiscardsTests.cs" />
     <Compile Include="HandTests.cs" />
+    <Compile Include="PlayAreaTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
