--- a/DominionTDD/DominionTDD.csproj
+++ b/DominionTDD/DominionTDD.csproj
@@ -51,6 +51,7 @@
     <Compile Include="DeckIsEmptyException.cs" />
     <Compile Include="Discards.cs" />
     <Compile Include="Hand.cs" />
+    <Compile Include="PlayArea.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
