--- a/DominionTDD.Tests/DominionTDD.Tests.csproj
+++ b/DominionTDD.Tests/DominionTDD.Tests.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NSubstitute">
+      <HintPath>..\packages\NSubstitute.1.8.1.0\lib\net45\NSubstitute.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
     </Reference>
@@ -49,11 +52,12 @@
     <Compile Include="Cards\GoldTests.cs" />
     <Compile Include="Cards\ProvinceTests.cs" />
     <Compile Include="Cards\SilverTests.cs" />
-    <Compile Include="DeckTests.cs" />
-    <Compile Include="DiscardsTests.cs" />
-    <Compile Include="HandTests.cs" />
-    <Compile Include="PlayAreaTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="State\DeckTests.cs" />
+    <Compile Include="State\DiscardsTests.cs" />
+    <Compile Include="State\HandTests.cs" />
+    <Compile Include="State\PlayAreaTests.cs" />
+    <Compile Include="State\PlayerStateTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
