--- a/DominionTDD/DominionTDD.csproj
+++ b/DominionTDD/DominionTDD.csproj
@@ -47,12 +47,18 @@
     <Compile Include="Cards\ICard.cs" />
     <Compile Include="Cards\Province.cs" />
     <Compile Include="Cards\Silver.cs" />
-    <Compile Include="Deck.cs" />
     <Compile Include="DeckIsEmptyException.cs" />
-    <Compile Include="Discards.cs" />
-    <Compile Include="Hand.cs" />
-    <Compile Include="PlayArea.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="State\Deck.cs" />
+    <Compile Include="State\Discards.cs" />
+    <Compile Include="State\Hand.cs" />
+    <Compile Include="State\IDeck.cs" />
+    <Compile Include="State\IDiscards.cs" />
+    <Compile Include="State\IHand.cs" />
+    <Compile Include="State\IPlayArea.cs" />
+    <Compile Include="State\IShuffler.cs" />
+    <Compile Include="State\PlayArea.cs" />
+    <Compile Include="State\PlayerState.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
