--- a/DominionTDD.Tests/DominionTDD.Tests.csproj
+++ b/DominionTDD.Tests/DominionTDD.Tests.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Cards\ProvinceTests.cs" />
     <Compile Include="Cards\SilverTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="State\CardCollectionTests.cs" />
     <Compile Include="State\DeckTests.cs" />
     <Compile Include="State\DiscardsTests.cs" />
     <Compile Include="State\HandTests.cs" />
