--- a/DominionTDD/DominionTDD.csproj
+++ b/DominionTDD/DominionTDD.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Cards\Silver.cs" />
     <Compile Include="DeckIsEmptyException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="State\CardCollection.cs" />
     <Compile Include="State\Deck.cs" />
     <Compile Include="State\Discards.cs" />
     <Compile Include="State\Hand.cs" />
